_sass/components/modules/_article.scss
/* ==========================================================================
   @group Article
   ========================================================================== */

@import "../../mixins/cover-absolutely";

// Article wrapper
.h-entry {
  &--in-collection {
    background: #fff;
    padding: 15px;
    position: relative;

    display: flex;
    flex-direction: column;
    width: 100%;

    @include respond-to($breakpoint-large) {
      margin: 8px;
    }

    .e-content {
      display: flex;
      flex-direction: column;
      flex: 1 0 auto;
    }

    transition: box-shadow $transition-duration linear, background $transition-duration linear;

    &:hover {
      background: $color-background;
      box-shadow: 0 1px 2px rgba(0, 0, 0, .07);
    }
  }
}

.e-content {
  &--single {
    word-break: break-word;

    @include respond-to($breakpoint-medium) {
      @include margin(0, $base-line-height * 2);
    }
  }
}

.l-heading {
  padding-top: $navbar-height + $base-line-height;
  padding-bottom: relative-size($base-line-height);
  @include margin(0, $base-line-height);

  @include respond-to($breakpoint-medium) {
    padding-top: relative-size(81 + (27 * 2)); // Hardcode for now
    padding-bottom: relative-size($base-line-height * 2);
  }

  background: $color-background;
  // background: linear-gradient(45deg, #0ED42E, #00d4ff);

  &--styleguide {
    background: none;
  }
}

.read-more-wrapper {
  margin-top: auto;
}

.overlay-link {
  @include cover-absolutely();
  z-index: 1;
  border-bottom: 0;
  overflow: hidden;
  text-indent: 200%;
  white-space: nowrap;
  visibility: visible;
}

.read-more {
  @include size-and-leading(16, $base-line-height);
  padding: 6px 0;
  // margin-top: -27px;
  display: inline-block;
  vertical-align: middle;
  color: $color-text-dark;
  border-bottom: none;
  font-weight: $font-weight-bold;
  overflow: hidden; // TO make sure the focus ring respects layout

  &::after {
    content: '';
    display: block;
    height: 2px;
    background-color: $color-main;
  }

  &:focus,
  &:hover,
  &:active {
    color: $color-main;

    &::after {
      background-color: $color-main;
    }
  }
}

.articles {
  // Equal height items
  display: flex;
  flex-wrap: wrap;
  margin: 0 -15px;
  @include respond-to($breakpoint-large) {
    margin: 0 -22px;
  }

  // Custom responsive grid
  &__item {
    flex: 0 0 100%;
    display: flex;
    word-break: break-word;
  }

  @include respond-to($breakpoint-small) {
    &__item {
      flex: 0 0 50%;
    }
  }

  @include respond-to($breakpoint-medium) {
    &__item {
      flex: 0 0 33.3333%;
    }
  }

  &--home {
    .articles__item {
      @include respond-to($breakpoint-medium) {
        flex: 0 0 50%;
      }
    }
  }
}

// Intro text (About, Work)
.text-intro {
  @include respond-to($breakpoint-medium) {
    @include size-and-leading(24, 36);
  }

  @include respond-to($breakpoint-large) {
    @include size-and-leading(30, 50);
  }
}

